Update original string and translation

--- a/templates/default/stripe_preferences.html.twig
+++ b/templates/default/stripe_preferences.html.twig
@@ -39,7 +39,7 @@
             <div class="ui segment">
                 {%if login.isAdmin() %}
                     <div class="inline field">
-                        <label>{{ _T("Stripe webhook URL", "stripe") }} :</label>
+                        <label>{{ _T("Stripe webhook endpoint URL", "stripe") }} :</label>
                         <code>{{ webhook_url }}</code>
                     </div>
                     <div class="inline field">
