--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <a href="{{ site.github.url }}" class="btn">Accueil</a>
+      <a href="{{ site.github.url }}" class="btn">Home</a>
       <a href="documentation.html" class="btn">Documentation</a>
-      <a href="parametrage.html" class="btn">Configuration</a>
-      <a href="{{ site.github.releases_url }}" class="btn">Télécharger</a>
+      <a href="{{ site.github.releases_url }}" class="btn">Download</a>
       <!--{% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
